syntax = "proto3";

package rivet.backend.pkg.module.msg.ns_version_set_complete;

import "proto/common.proto";

/// name = "msg-module-ns-version-set-complete"
/// parameters = [
/// 	{ name = "namespace_id" },
/// ]
message Message {
	rivet.common.Uuid namespace_id = 1;
	rivet.common.Uuid version_id = 2;
}

